IF(WIN32)
    SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
ENDIF()

IF( LIBCITYGML_USE_OPENGL)
  FIND_PACKAGE( OpenGL REQUIRED )
ENDIF( LIBCITYGML_USE_OPENGL )
FIND_PACKAGE( XercesC )
IF( NOT XercesC_FOUND )
  FIND_PACKAGE( Xerces REQUIRED )
ENDIF( NOT XercesC_FOUND)

IF( LIBCITYGML_DYNAMIC )
  ADD_DEFINITIONS( -DLIBCITYGML_DYNAMIC )
ELSE( LIBCITYGML_DYNAMIC )
  ADD_DEFINITIONS( -DLIBCITYGML_STATIC )
ENDIF( LIBCITYGML_DYNAMIC )

# INCLUDE_DIRECTORIES( ${CITYGML_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../sources/include ${CMAKE_BINARY_DIR}/sources/include)

SET( PRG_SRCS citygmltest.cpp )

ADD_EXECUTABLE( citygmltest ${PRG_SRCS} )

IF( XercesC_FOUND )
  TARGET_LINK_LIBRARIES( citygmltest citygml XercesC::XercesC)
ELSE( XercesC_FOUND )
  TARGET_LINK_LIBRARIES( citygmltest citygml ${XERCESC_LIBRARY} )
ENDIF( XercesC_FOUND )
IF(LIBCITYGML_USE_OPENGL)
  TARGET_COMPILE_DEFINITIONS( citygmltest PUBLIC LIBCITYGML_USE_OPENGL)
  TARGET_LINK_LIBRARIES( citygmltest citygml ${OPENGL_LIBRARIES} )
ENDIF(LIBCITYGML_USE_OPENGL)

install(TARGETS citygmltest RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})


add_test(NAME berlin_open_data_sample_data COMMAND citygmltest ../../data/berlin_open_data_sample_data.citygml)
add_test(NAME b1_lod2_s COMMAND citygmltest ../../data/b1_lod2_s.gml)
add_test(NAME FZK-Haus-LoD0-KIT-IAI-KHH-B36-V1 COMMAND citygmltest ../../data/FZK-Haus-LoD0-KIT-IAI-KHH-B36-V1.gml)